fix flash notices on mobile app

--- a/app/assets/stylesheets/mobile.sass
+++ b/app/assets/stylesheets/mobile.sass
@@ -303,6 +303,16 @@
   background: linear-gradient(to right,  #d20e68 0%,#ff170a 51%,#ff9400 100%)
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d20e68', endColorstr='#ff9400',GradientType=1 )
 
+.mobile-flash
+  position: absolute
+  top: 22px
+  z-index: 10
+  width: 100%
+  text-align: center
+
+  .flash
+    display: inline
+
 #sign-in, #forgot-password, #feedback
   margin: 0 auto
   display: block
